Fix alignment of the header items on mobile screens

--- a/app/packs/stylesheets/nav.scss
+++ b/app/packs/stylesheets/nav.scss
@@ -213,7 +213,7 @@ header {
     }
 
     &__logo {
-      @apply flex flex-col items-center justify-center max-[449px]:col-span-7 max-[470px]:col-span-6 max-[539px]:col-span-5 col-span-4 sm:col-span-3 lg:flex-row lg:justify-start lg:gap-8 lg:col-span-5 xl:col-span-4;
+      @apply flex flex-col items-center justify-center mr-auto max-[449px]:col-span-7 max-[470px]:col-span-6 max-[539px]:col-span-5 col-span-4 sm:col-span-3 lg:flex-row lg:justify-start lg:gap-8 lg:col-span-5 xl:col-span-4;
     }
 
     &__dropdown-trigger {
